<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.miguelromeral.password.ui.game.GameActivity">


    <item
        android:title="@string/df_option_search"
        android:id="@+id/action_search"
        android:icon="@drawable/search_white"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />


    <item
        android:id="@+id/action_export"
        android:orderInCategory="300"
        android:title="@string/df_option_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:orderInCategory="400"
        android:title="@string/df_option_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_custom_passwords"
        android:orderInCategory="1000"
        android:title="@string/df_option_clear"
        app:showAsAction="never" />

</menu>
