<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="password"
            type="es.miguelromeral.password.classes.Password" />

    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/custompassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.custompassword.CustomPasswordFragment">

    <include
        android:id="@+id/layoutWord"
        layout="@layout/control_edit_text"
        bind:header="@{String.format(@string/cpf_title_word)}"
        bind:value="@={password.word}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutWord">


        <ImageView
            android:id="@+id/imageView"


            android:layout_width="26sp"
            android:layout_height="26sp"

            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            style="@style/MiniIconTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/category" />



        <TextView
            android:id="@+id/textView"
            style="@style/mainTextView"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cpf_title_category"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />


        <include
            android:id="@+id/partial_spinner_category"
            layout="@layout/partial_spinner_category"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutCategory">


        <ImageView
            android:id="@+id/imageView2"


            android:layout_width="26sp"
            android:layout_height="26sp"

            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            style="@style/MiniIconTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/level" />



        <TextView
            android:id="@+id/textView6"
            style="@style/mainTextView"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cpf_title_level"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />


        <include
            android:id="@+id/partial_spinner_level"
            layout="@layout/partial_spinner_level"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutLevel">


        <Button
            android:id="@+id/bInsert"
            style="@style/MainButtonRounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/cpf_button_add_password"
            app:layout_constraintBottom_toBottomOf="@+id/bAddHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bAddHint" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bInsert"
            app:layout_constraintStart_toEndOf="@+id/bAddHint"
            app:layout_constraintTop_toTopOf="parent">




            <ImageView
                android:id="@+id/imageView7"


                android:layout_width="26sp"
                android:layout_height="26sp"

                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"

                style="@style/MiniIconTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hint" />





            <TextView
                android:id="@+id/textView7"
                style="@style/mainTextView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cpf_title_hints"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/bAddHint"
            style="@style/MinorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/cpf_button_add_hint"
            app:layout_constraintBottom_toBottomOf="@+id/layoutHints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layoutHints" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/custom_hint_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/layoutButtons"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
