<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clGame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@+id/clSpeech"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.game.GameActivityFragment"
    tools:showIn="@layout/activity_game">

    <TextView
        android:id="@+id/tvPassword"
        style="@style/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Password!"
        app:layout_constraintEnd_toEndOf="@+id/bSuccess"
        app:layout_constraintStart_toStartOf="@+id/bFail"
        app:layout_constraintTop_toBottomOf="@+id/layoutScore" />

    <Button
        android:id="@+id/bFail"
        style="@style/FailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/pg_button_miss"
        app:layout_constraintStart_toStartOf="@+id/tvFails"
        app:layout_constraintTop_toBottomOf="@+id/tvFails" />

    <Button
        android:id="@+id/bSuccess"
        style="@style/SuccessButton"
        android:enabled="false"
        android:text="@string/pg_button_hit"
        app:layout_constraintEnd_toEndOf="@+id/tvSuccess"
        app:layout_constraintTop_toBottomOf="@+id/tvSuccess" />


    <TextView
        android:id="@+id/tvFails"
        style="@style/tvScoreFail"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pg_score_zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSuccess"
        style="@style/tvScoreSuccess"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pg_score_zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTimer"
        style="@style/tvTimer"
        app:layout_constraintEnd_toEndOf="@+id/tvTimerTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTimerTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTimerTitle"
        tools:text="60" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tvTimer"
        app:layout_constraintStart_toStartOf="@+id/tvTimer"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer">


        <ImageView
            android:id="@+id/imageView"
            style="@style/MiniIconTheme"
            android:layout_width="16sp"

            android:layout_height="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star_add" />

        <TextView
            android:id="@+id/tvScore"
            style="@style/mainTextView"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="2200" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableLayout
        android:id="@+id/layoutPasswordProperties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivCategory"
                    style="@style/MiniIconTheme"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
                    app:layout_constraintEnd_toStartOf="@+id/tvCategory"
                    app:layout_constraintTop_toTopOf="@+id/tvCategory"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/category" />

                <TextView
                    android:id="@+id/tvCategory"
                    style="@style/mainTextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Category" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivLevel"
                    style="@style/MiniIconTheme"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLevel"
                    app:layout_constraintEnd_toStartOf="@+id/tvLevel"
                    app:layout_constraintTop_toTopOf="@+id/tvLevel"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/level" />

                <TextView
                    android:id="@+id/tvLevel"
                    style="@style/mainTextView"
                    tools:text="Level"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHintsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutPasswordProperties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            style="@style/MiniIconTheme"
            android:layout_width="16sp"

            android:layout_height="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvHeaderHints"
            app:layout_constraintEnd_toStartOf="@+id/tvHeaderHints"
            app:layout_constraintTop_toTopOf="@+id/tvHeaderHints"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/hint" />


        <TextView
            android:id="@+id/tvHeaderHints"
            style="@style/mainTextView"
            android:text="@string/pg_title_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHintsTitle" />

    <TextView
        android:id="@+id/tvTimerTitle"
        style="@style/mainTextView"
        android:layout_marginTop="8dp"
        android:text="@string/pg_timer_title"
        app:layout_constraintTop_toTopOf="parent"
        bind:layout_constraintEnd_toEndOf="parent"
        bind:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
